# py-project

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TYPE_MEMO.md  config.yaml  pyproject.toml  renovate.json
.github/workflows/: test.yaml  test.yml
schema/: config.schema
src/: app.py  applier.py  cli.py  differ.py
src/handlers/: __init__.py  my_py_lib.py  pyproject.py  template_copy.py
src/py_project/: __init__.py  __main__.py  app.py  applier.py  cli.py  config.py  dep_updater.py  differ.py  progress.py
src/py_project/handlers/: __init__.py  base.py  gitlab_ci.py  my_py_lib.py  pyproject.py  template_copy.py
templates/dockerignore/: .dockerignore
templates/gitignore/: .gitignore
templates/pre-commit/: .pre-commit-config.yaml
templates/pyproject/: sections.toml
templates/python-version/: .python-version
templates/ruff/: ruff.toml
templates/yamllint/: .yamllint.yaml
tests/: __init__.py  conftest.py
tests/integration/: test_applier.py
tests/unit/: test_app.py  test_cli.py  test_config.py  test_dep_updater.py  test_differ.py  test_gitlab_ci.py  test_handlers_base.py  test_my_py_lib.py  test_progress.py  test_pyproject.py  test_template_copy.py
