[project]
name = "py-project"
version = "0.1.0"
description = "複数の Python プロジェクトに標準的な設定を一括適用するツール"
readme = "DESIGN.md"
requires-python = ">=3.11"
dependencies = [
    "my-lib @ git+https://github.com/kimata/my-py-lib",
    "docopt>=0.6",
    "jinja2>=3.0",
    "rich>=13.0",
    "tomlkit>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_project"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
