[project]
name = "py-project"
version = "0.1.0"
description = "複数の Python プロジェクトに標準的な設定を一括適用するツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "my-lib @ git+https://github.com/kimata/my-py-lib@97597c01d3f149c9deff413bd11d7803c4a26207",
    "docopt>=0.6",
    "jinja2>=3.0",
    "rich>=13.0",
    "tomlkit>=0.12",
]
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_project"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
# E2E テストはデフォルトで除外（外部サーバーが必要なため）
# E2E テスト実行: uv run pytest tests/e2e/ --host <host> --port <port>
addopts = "--verbose --timeout=300 --durations=10 --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --junit-xml=reports/junit-report.xml --html=reports/pytest.html --self-contained-html --cov=src --cov-report=html --cov-report=term-missing --cov-report=xml:reports/coverage.xml -n 4 --ignore=tests/e2e"
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing\\.popen_fork",
    "ignore:unclosed database.*:ResourceWarning:rich.*",
    "ignore:unclosed database.*:ResourceWarning:influxdb_client.*",
    "ignore:unclosed database.*:ResourceWarning:coverage.*",
    "ignore:unclosed database.*:ResourceWarning:time_machine.*",
    "ignore:unclosed database.*:ResourceWarning:werkzeug.*",
    "ignore:unclosed database.*:ResourceWarning:_pytest.*",
    "ignore:unclosed database.*:ResourceWarning:typing.*",
    "ignore:unclosed database.*:ResourceWarning:multiprocessing.*",
    "ignore:unclosed database.*:ResourceWarning:logging.*",
    "ignore::ResourceWarning:_pytest.unraisableexception",
    "ignore::ResourceWarning:coverage.sqldata",
    "ignore::ResourceWarning:coverage.collector",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
# tomlkit の型定義が不完全なため、一部のエラーを無視
reportArgumentType = "warning"
reportOperatorIssue = "warning"
reportIndexIssue = "warning"
reportGeneralTypeIssues = "warning"
include = ["src", "tests"]
reportMissingImports = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "flaky>=3.8.1",
    "playwright>=1.49.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.6.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.4.0",
    "time-machine>=2.16.0",
    "mypy>=1.14.0",
    "pyright>=1.1.0",
    "types-pytz>=2024.1.0",
    "types-paramiko>=3.4.0",
    "types-pyyaml>=6.0.12",
]
